--- a/PA1/Makefile
+++ b/PA1/Makefile
@@ -8,26 +8,18 @@ pa1: $(OBJS)
 	$(GCC) $(OBJS) -o pa1
 
 .c.o: 
-	$(GCC) $(TESTFALGS) -c $*.c 
+	$(GCC) -c $*.c 
 
-testall: test1 test2 test3 test4
+testall: test1sa test1sl test2 test3 test4
 
-test1: pa1
-	./pa1  > output16
-	diff output16 expected/expected16
+test1sa: pa1
+	./pa1 1K.b output1Ka
+	diff output1Ka 1Ksa.b
 
-test2: hw04
-	./hw04 inputs/2017 > output17
-	diff output17 expected/expected17
-
-test3: hw04
-	./hw04 inputs/2018 > output18
-	diff output18 expected/expected18
-
-test4: hw04
-	./hw04 inputs/2019 > output19
-	diff output19 expected/expected19
+test1sl: pa1
+	./pa1 1K.b output1Kl
+	diff output1kl 1Ksl.b
 
 clean: # remove all machine generated files
-	rm -f hw04 *.o output??
+	rm -f pa1 *.o output???
 
