--- a/PA1/Makefile
+++ b/PA1/Makefile
@@ -13,7 +13,7 @@ pa1: $(OBJS)
 testall: test1a test1l test2 test3 test4
 
 test1: pa1
-	./pa1 1K.b output1Ka
+	./pa1 -a 1K.b output1Ka
 	diff output1Ka 1Ksa.b
 
 test1l: pa1
