--- a/PA1/Makefile
+++ b/PA1/Makefile
@@ -28,3 +28,5 @@ clean: # remove all machine generated files
 	rm -f pa1 *.o output???
 update:
 	git push -u https://drewlew13:IndyJags13@github.com/drewlew13/ECE368.git master
+push:
+	git push origin master
