--- a/PA1/Makefile
+++ b/PA1/Makefile
@@ -9,8 +9,6 @@ pa1: $(OBJS)
 .c.o: 
 	$(GCC) -c $*.c 
 
-testall: test1a test1l test2a test2l
-
 test1a: pa1
 	./pa1 -a examples/1K.b output1Ka
 	diff output1Ka examples/1Ksa.b
@@ -22,7 +20,7 @@ test2a: pa1
 	./pa1 -a examples/15.b output15a
 	diff output15a examples/15sa.b
 
-test2l: pa1ma
+test2l: pa1
 	./pa1 -a examples/15.b output15l
 	diff output15l examples/15sa.b
 
