implemented mergesort over bubble sort

--- a/PA2/Makefile
+++ b/PA2/Makefile
@@ -13,7 +13,9 @@ pa2: $(OBJS)
 
 test1: pa2
 	./pa2  original/gophers freqOutput1 headOutput1 codeOutput1
-	diff count/gophers.count freqOutput1 tree/gophers.tree headOutput1 code/gophers.code codeOutput1
+	diff count/gophers.count freqOutput1 
+	diff tree/gophers.tree headOutput1 
+	diff code/gophers.code codeOutput1
 
 checkFreq:
 	diff count/gophers.count freqOutput1
@@ -33,4 +35,4 @@ test1M: pa1
 	./pa1 -a examples/1M.b output1Ma
 
 clean: # remove all machine generated files
-	rm -f pa1 *.o freqOutput?
+	rm -f pa1 *.o ????Output?
