updated functions, need to finish compress

--- a/PA2/Makefile
+++ b/PA2/Makefile
@@ -12,7 +12,7 @@ pa2: $(OBJS)
 	$(GCC) -c $*.c 
 
 test1: pa2
-	./pa2  original/gophers freqOutput1 headOutput1 codeOutput1
+	./pa2  original/gophers freqOutput1 headOutput1 codeOutput1 treeOutput1
 	diff count/gophers.count freqOutput1 
 	# diff tree/gophers.tree headOutput1 
 	diff code/gophers.code codeOutput1
