--- a/PA2/Makefile
+++ b/PA2/Makefile
@@ -12,7 +12,7 @@ pa2: $(OBJS)
 	$(GCC) -c $*.c 
 
 testmemory: pa2
-	$(VAL) --log-file=memcheck1.txt ./pa2 original/binary1 freqOutput6 headOutput6 codeOutput6 treeOutput6
+	$(VAL) --log-file=memcheck1.txt ./pa2 original/empty freqOutput6 headOutput6 codeOutput6 treeOutput6
 
 testall: test1 test2 test3 test4 test5 test6
 
