updating for intitial debugging

--- a/PA4/Makefile
+++ b/PA4/Makefile
@@ -1,12 +1,12 @@
 WARNINGFLAGS = -Wall -Wshadow -Wvla --pedantic
 VAL = valgrind --leak-check=full --leak-check=full --show-leak-kinds=all
-GCC = gcc -g -O3 -std=c99 $(WARNINGFLAGS)
+GCC = gcc -O3 -std=c99 $(WARNINGFLAGS)
 
 SRCS = hbt.c pa4.c
 OBJS = $(SRCS:%.c=%.o)
 
 pa4: $(OBJS) 
-	$(GCC) $(OBJS) -o pa3
+	$(GCC) $(OBJS) -o pa4
 
 .c.o: 
 	$(GCC) -c $*.c 
@@ -16,17 +16,11 @@ testall: test1 test2 test3
 testmemory: pa3
 	$(VAL) --log-file=memcheck1.txt ./pa3 examples/empty.po 3Outputpr 3Outputdi 3Outputpc
 
-test1: pa4
-	./pa4 examples/3.po 3Outputpr 3Outputdi 3Outputpc
-	diff examples/3.pr 3Outputpr 
-	diff examples/3.dim 3Outputdi
-	diff examples/3.pck 3Outputpc
+test1b: pa4
+	./pa4 -b examples-2/ops0.b tree0b
 
-test2: pa3
-	./pa3 examples/8.po 8Outputpr 8Outputdi 8Outputpc
-	diff examples/8.pr 8Outputpr 
-	diff examples/8.dim 8Outputdi
-	diff examples/8.pck 8Outputpc
+test1e: pa4
+	./pa4 -e examples-2/ops0.b tree0e
 
 test3: pa3
 	./pa3 examples/1K.po KOutputpr KOutputdi KOutputpc
@@ -35,4 +29,4 @@ test4: pa3
 	./pa3 examples/empty.po EOutputpr EOutputdi EOutputpc
 
 clean: # remove all machine generated files
-	rm -f pa3 *.o ?Output??
+	rm -f pa4 *.o tree??
