--- a/PA4/Makefile
+++ b/PA4/Makefile
@@ -11,19 +11,25 @@ pa4: $(OBJS)
 .c.o: 
 	$(GCC) -c $*.c 
 
-testall: test1 test2 test3
+testeval: test1e test2e test3e
 
 testmemory: pa4
 	$(VAL) --log-file=memcheck1.txt ./pa4 -b examples-2/ops0.b tree0b
 
 test1b: pa4
-	./pa4 -b examples-2/ops0.b tree0b
+	./pa4 -b examples-2/ops3.b tree0b
 	diff examples-2/tree0.b tree0b
 
 test1e: pa4
-	./pa4 -e examples-2/ops0.b tree0e
+	./pa4 -e examples-2/invalidtree0.b
 
-test3: pa3
+test2e: pa4
+	./pa4 -e examples-2/invalidtree1.b
+
+test3e: pa4
+	./pa4 -e examples-2/invalidtree2.b
+
+test: pa3
 	./pa3 examples/1K.po KOutputpr KOutputdi KOutputpc
 
 test4: pa3
