--- a/PA5/Makefile
+++ b/PA5/Makefile
@@ -16,10 +16,10 @@ testmerge: test1m test2m test3m
 testquick: test1q test2q test3q
 
 testmemorymerge: pa5
-	$(VAL) --log-file=memcheckmerge.txt ./pa5 -m examples/10.b output10
+	$(VAL) --log-file=memcheckmerge.txt ./pa5 -m examples/1M.b output10
 
 testmemoryquick: pa5
-	$(VAL) --log-file=memcheckquick.txt ./pa5 -q examples/10.b output10
+	$(VAL) --log-file=memcheckquick.txt ./pa5 -q examples/1M.b output10
 
 test1m: pa5
 	./pa5 -m examples/10.b output10m
